--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "corecooks/chef_server"]
-	path = corecooks/chef_server
+[submodule "corebooks/chef_server"]
+	path = corebooks/chef_server
 	url = https://github.com/kodelint/chef_server.git
