Added following features:
- Enabled VM verfcation, exit early if VM name is not matching
- Widden the shell to 120 column for beautification
- Enabled arguments to take VM name as argument (optional)
- Display the write message when performing any action
- Disabling the VAGRANT ENV display for now

--- a/hosts/hosts.yml
+++ b/hosts/hosts.yml
@@ -4,8 +4,12 @@
   ram: 1512
   ip: 192.168.38.31
   share: true
-- name: chef-workstation
+  default_share: true
+- name: cheflab-workstation
   box: bento/ubuntu-14.04
   ram: 512
   ip: 192.168.38.32
-  share: false
+  share: true
+  default_share: true
+  cookbooks: "~/Google Drive/Personal/Chef"
+  cookbook_share: false
