--- a/provisioner/Config.cfg
+++ b/provisioner/Config.cfg
@@ -22,7 +22,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       srv.vm.hostname = servers["name"] + DOMAIN
       srv.vm.box = servers["box"]
       srv.vm.network "private_network", ip: servers["ip"]
-      srv.vm.synced_folder ".", "/data", id: "mapping", disabled: servers["share"]
+      srv.vm.synced_folder ".", "/data", id: "shared", disabled: servers["share"]
+      srv.vm.synced_folder ".", "/vagrant", disabled: servers["share"]
       srv.vm.provider :virtualbox do |vb|
         vb.memory = servers["ram"]
         vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
@@ -32,6 +33,9 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
              chef.cookbooks_path = "#{corebooks}"
              chef.add_recipe "chef_server::server"
            end
+      end
+      if servers["name"] == "cheflab-workstation"
+        srv.vm.synced_folder servers["cookbooks"], "/cheflab/cookbooks", disabled: servers["cookbooks_share"]
       end
     end
   end
