Added Following functions:
 - Get the secret keys to project folder "provisioner/auth/keys/“
 - Make the permissions correct
 - Exposed keys to the VMs for password less communication

--- a/hosts/hosts.yml
+++ b/hosts/hosts.yml
@@ -5,6 +5,8 @@
   ip: 192.168.38.31
   share: true
   default_share: true
+  share_keys: false
+  cheflab_keys: "auth/keys"
 - name: cheflab-workstation
   box: bento/ubuntu-14.04
   ram: 512
@@ -13,3 +15,5 @@
   default_share: true
   cookbooks: "~/Google Drive/Personal/Chef"
   cookbook_share: false
+  share_keys: false
+  cheflab_keys: "auth/keys"
