--- a/provisioner/Config.cfg
+++ b/provisioner/Config.cfg
@@ -22,18 +22,18 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       srv.vm.hostname = servers["name"] + DOMAIN
       srv.vm.box = servers["box"]
       srv.vm.network "private_network", ip: servers["ip"]
-      srv.vm.synced_folder ".", "/data", id: "shared", disabled: servers["share"]
       srv.vm.synced_folder ".", "/vagrant", disabled: servers["share"]
+      srv.vm.synced_folder servers["cheflab_keys"], "/cheflab/keys", disabled: servers["share_keys"]
       srv.vm.provider :virtualbox do |vb|
         vb.memory = servers["ram"]
         vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
       end
-      if servers["name"] == "cheflab-server"
-           srv.vm.provision :chef_solo do |chef|
-             chef.cookbooks_path = "#{corebooks}"
-             chef.add_recipe "chef_server::server"
-           end
-      end
+#      if servers["name"] == "cheflab-server"
+#           srv.vm.provision :chef_solo do |chef|
+#             chef.cookbooks_path = "#{corebooks}"
+#             chef.add_recipe "chef_server::server"
+#           end
+#      end
       if servers["name"] == "cheflab-workstation"
         srv.vm.synced_folder servers["cookbooks"], "/cheflab/cookbooks", disabled: servers["cookbooks_share"]
       end
