--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "corebooks/chef_server"]
 	path = corebooks/chef_server
 	url = https://github.com/kodelint/chef_server.git
+[submodule "corebooks/chef_workstation"]
+	path = corebooks/chef_workstation
+	url = https://github.com/kodelint/chef_workstation.git
