--- a/hosts/hosts.yml
+++ b/hosts/hosts.yml
@@ -6,7 +6,7 @@
   share: true
   default_share: true
   share_keys: false
-  cheflab_keys: "auth/keys"
+  cheflab_shared_conf: "conf"
 - name: cheflab-workstation
   box: bento/ubuntu-14.04
   ram: 512
@@ -16,4 +16,4 @@
   cookbooks: "~/Google Drive/Personal/Chef"
   cookbook_share: false
   share_keys: false
-  cheflab_keys: "auth/keys"
+  cheflab_shared_conf: "conf"
