--- a/provisioner/Config.cfg
+++ b/provisioner/Config.cfg
@@ -23,19 +23,26 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
       srv.vm.box = servers["box"]
       srv.vm.network "private_network", ip: servers["ip"]
       srv.vm.synced_folder ".", "/vagrant", disabled: servers["share"]
-      srv.vm.synced_folder servers["cheflab_keys"], "/cheflab/keys", disabled: servers["share_keys"]
+      srv.vm.synced_folder servers["cheflab_shared_conf"], "/cheflab/conf", disabled: servers["share_keys"]
       srv.vm.provider :virtualbox do |vb|
         vb.memory = servers["ram"]
         vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
       end
-#      if servers["name"] == "cheflab-server"
-#           srv.vm.provision :chef_solo do |chef|
-#             chef.cookbooks_path = "#{corebooks}"
-#             chef.add_recipe "chef_server::server"
-#           end
-#      end
+      # srv.vm.provision "file", source: "/cheflab/keys/cheflab-hosts.cfg", destination: "/etc/hosts"
+			srv.vm.provision "shell", inline: "cat /cheflab/conf/cache/cheflab-hosts.cfg  > /etc/hosts"
+      if servers["name"] == "cheflab-server"
+          srv.vm.provision :chef_solo do |chef|
+            chef.cookbooks_path = "#{corebooks}"
+            chef.add_recipe "chef_server::server"
+          end
+      end
       if servers["name"] == "cheflab-workstation"
         srv.vm.synced_folder servers["cookbooks"], "/cheflab/cookbooks", disabled: servers["cookbooks_share"]
+        srv.vm.provision :chef_solo do |chef|
+          chef.cookbooks_path = "#{corebooks}"
+          chef.add_recipe "chef_workstation::default"
+        end
+        srv.vm.provision "shell", inline: "sudo scp -o stricthostkeychecking=no -i /cheflab/conf/keys/cheflab-server.pem vagrant@cheflab-server:/home/vagrant/*.pem .chef/"
       end
     end
   end
